[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
miette = "7.6.0"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.52", features = ["derive"] }
thiserror = "1.0.63"
